# es_pcs_26

./: pippo.txt
es1/: media.cpp
esercitazione1/: CMakeLists.txt  lett.cpp  media.cpp
